fix: buttons layout
When the blog was removed, as well as its button, the buttons layout broke.

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header #welcome h1 {
     margin-top: 52px;
     max-width: 100%;
     display: grid;
-    grid-template-areas: 'blog linkedin''email email' 'github instagram';
+    grid-template-areas: 'github linkedin''email email' 'instagram instagram';
     gap: 22px;
 }
 
